--- a/İtemler.html
+++ b/İtemler.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar">
                <div class="logo">
-                  <a href = "index.html"> <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\logocu.png" alt="" width="70px" height="50px"></a>             
+                  <a href = "index.html"> <img src="images/logocu.png" alt="" width="70px" height="50px"></a>             
                 </div>
                <ul>
                    <li><a href="home.html"> Ana Sayfa </a> </li>
@@ -28,17 +28,17 @@
                 
                    <div class="boyutlandirma">
 
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\renaultlogo.png" alt="">       
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\megane.png"  alt="">      
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\clio.png"  alt="">      
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\vwlogo.png"  alt="">         
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\golf.png"  alt="">       
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\polo.png"  alt="">       
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\caddy.png" width="150px" height="150px" alt="">      
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\passat.png"  alt="">         
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\hyundailogo.png"  alt="">      
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\i20.png"  alt="">        
-                    <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\tucson.png"  alt="">     
+                    <img src="images/renaultlogo.png" alt="">       
+                    <img src="images/megane.png"  alt="">      
+                    <img src="images/clio.png"  alt="">      
+                    <img src="images/vwlogo.png"  alt="">         
+                    <img src="images/golf.png"  alt="">       
+                    <img src="images/polo.png"  alt="">       
+                    <img src="images/caddy.png" width="150px" height="150px" alt="">      
+                    <img src="images/passat.png"  alt="">         
+                    <img src="images/hyundailogo.png"  alt="">      
+                    <img src="images/i20.png"  alt="">        
+                    <img src="images/tucson.png"  alt="">     
 
                   </div>
             </div>
