--- a/deneme.html
+++ b/deneme.html
@@ -40,7 +40,7 @@
     
 
     <div class="card">
-        <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\caddy.png" alt="AK47 Frontside" width="300px">
+        <img src="images/caddy.png" alt="AK47 Frontside" width="300px">
         <h1>Caddy</h1>
         <br class="price"><b></b></br>
         <br>Stokta var..</br>
@@ -48,7 +48,7 @@
       </div>
 
       <div class="card1">
-        <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\clio.png" alt="AK47 Fuel Injector" width="300px">
+        <img src="images/clio.png" alt="AK47 Fuel Injector" width="300px">
         <h1>Clio</h1>
         <br class="price1"><b></b></br>
         <br>Stokta var</br>
@@ -56,7 +56,7 @@
       </div>
 
       <div class="card2">
-        <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\i20.png" alt="Butterfly Fade" width="300px">
+        <img src="images/i20.png" alt="Butterfly Fade" width="300px">
         <h1>I20</h1>
         <br class="price2"><b></b></br>
         <br>Stokta yok..</br>
@@ -64,7 +64,7 @@
       </div>
 
       <div class="card3">
-        <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\polo.png" alt="M4A4 Howl" width="330px">
+        <img src="images/polo.png" alt="M4A4 Howl" width="330px">
         <h1>Megane</h1>
         <br class="price3"><b></b></br>
         <br>Stokta var</br>
@@ -72,7 +72,7 @@
       </div>
 
       <div class="card4">
-        <img src="C:\Users\Fatih\Desktop\webmadenciliğiproje\images\tucson.png" alt="USP-S" width="250px">
+        <img src="images/tucson.png" alt="USP-S" width="250px">
         <h1>Tucson</h1>
         <br class="price4"><b></b></br>
         <br>Stokta yok..</br>
